# sdk-core-c

./: .clang_complete  .codeclimate.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  testbuild  vector.c  vector.h
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  ci.yml
include/: BoundWitness.h  ByteStrongArray.h  ByteWeakArray.h  NodeBase.h  ShortStrongArray.h  ShortWeakArray.h  XYOHeuristicsBuilder.h  ZigZagBoundWitness.h  ZigZagBoundWitnessSession.h  boundwitnessoption.h  crypto.h  defines.h  hash.h  network.h  nodebase.h  nodelistener.h  objects.h  originchain.h  relaynode.h  repository.h  serializer.h  state.h  storage.h  xyo.h  xyobject.h
include/WolfSSL/: trng.h  wc_ecc.h  wc_hash.h  wc_hmac.h  wc_mpi_class.h  wc_port.h  wc_settings.h  wc_types.h
src/: BoundWitness.c  ByteArray.h  ByteStrongArray.c  ByteWeakArray.c  Index.c  IntStrongArray.c  IntWeakArray.c  NextPublicKey.c  Payload.c  PreviousHash.c  ShortStrongArray.c  ShortWeakArray.c  ShortWeakArray.h  ShortWeakArray.test.c  XYOHeuristicsBuilder.c  XYObject.c  XYObject.h  XYResult.h  XYResult.test.c  ZigZagBoundWitness.c  ZigZagBoundWitnessSession.c  ZigZagBoundWitnessSession.h  arrays.h  crypto.c  crypto.h  defines.h  endian.c  endian.h  hash.c  hash.h  main.c  network.c  network.h  nodebase.c  objects.h  originchain.c  relaynode.c  relaynode.h  repository.c  repository.h  (+15 more)
src/Objects/: BoundWitness.c  ByteStrongArray.c  ByteWeakArray.c  Index.c  IntStrongArray.c  IntWeakArray.c  NextPublicKey.c  Payload.c  PreviousHash.c  ShortStrongArray.c  ShortWeakArray.c  ZigZagBoundWitness.c  ZigZagBoundWitnessSession.c
src/WolfSSL/: trng.h  wc_integer.h  wc_md4.h  wc_md5.h  wc_memory.h  wc_random.h  wc_rsa.h  wc_sha.h  wc_sha256.h  wc_wolfmath.h
src/XYObjects/: XYObject.c  XYObject.h  XYObject.test.c  XYObjectHeader.h  XYObjectTypes.h
src/XYObjects/Array/: Iterator.c  Iterator.h
src/XYObjects/Array/LongWeakArray/: LongWeakArray.c  LongWeakArray.h
src/XYObjects/Array/ShortWeakArray/: ShortWeakArray.c  ShortWeakArray.h  ShortWeakArray2.h
src/XYObjects/Array/WeakArray/: WeakArray.c  WeakArray.h  WeakArray.test.c
src/include/arrays/: ByteStrongArray.h  ByteWeakArray.h  IntStrongArray.h  IntWeakArray.h  ShortStrongArray.h  ShortWeakArray.h
src/include/node/: boundwitnessoption.h  nodebase.h  nodelistener.h
src/include/objects/: BoundWitness.h  Index.h  NextPublicKey.h  Payload.h  PreviousHash.h  ZigZagBoundWitness.h  heuristics.h
src/include/state/: originchain.h  repository.h
src/node/: nodebase.c  relaynode.c
tests/: WeakArray.test.c  XYObject.test.c
tests/fuzzer/: CMakeLists.txt  FuzzWeakArray.test.cc  stubs.c
